--- a/themes/default/scss/_icons.scss
+++ b/themes/default/scss/_icons.scss
@@ -1,6 +1,6 @@
-@import '../fonts/kmcng-icon-pack/style';
+@import '../fonts/style';
 
-.kUseKMCngIcons {
+.kOverrideFAIcons {
     .fa {
         font-family: 'KMCng-icon-pack' !important;
     }
