--- a/themes/default/scss/index.scss
+++ b/themes/default/scss/index.scss
@@ -6,7 +6,7 @@
 @import '~@kaltura-ng2/kaltura-ui/styles/scss/theme';
 @import '~@kaltura-ng2/kaltura-primeng-ui/styles/scss/theme';
 
-@import 'icons';
+@import 'icons'; //icons font
 
 @import 'base';
 @import 'components';
