feat: add list box style

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -893,3 +893,7 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
     height: 34px;
   }
 }
+// list box
+.ui-listbox.ui-inputtext{
+  width: 100%;
+}
