--- a/themes/default/scss/_base.scss
+++ b/themes/default/scss/_base.scss
@@ -5,11 +5,12 @@ html {
 
 body {
 	background: $appBkgColor;
-	overflow: hidden;
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	margin: 0;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	text-rendering: geometricPrecision;
 }
 
@@ -66,7 +67,7 @@ select {
 	}
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1300px) {
 	.kContent {
 		width: 1200px;
 		margin: auto !important;
