--- a/themes/default/scss/_icons.scss
+++ b/themes/default/scss/_icons.scss
@@ -39,11 +39,11 @@
         @extend .kIconcheck_small:before;
         font-size: 10px;
     }
-    .ui-chkbox-icon.ui-c.fa.fa-check:before{
+    .ui-chkbox-icon.fa.fa-check:before{
         @extend .kIconcheck_small:before;
         font-size: 12px;
     }
-    .ui-chkbox-icon.ui-c.fa.fa-minus:before{
+    .ui-chkbox-icon.fa.fa-minus:before{
         @extend .kIconpartial_small:before;
         font-size: 9px;
     }
