--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -190,6 +190,7 @@ textarea.ui-inputtext {
 }
 .ui-datatable .ui-datatable-data>tr>td{
   border: 0px solid #ffffff;
+  overflow: hidden;
 }
 .ui-datatable .ui-datatable-scrollable-body{
   border-top: 1px solid #d9d9d9;
@@ -332,6 +333,13 @@ td.ui-datatable-emptymessage{
   }
   .ui-menuitem .ui-menuitem-link:hover{
     background-color: $kGrayscale7;
+  }
+}
+body .ui-tieredmenu.ui-menu {
+  width: 250px;
+  .ui-submenu-icon {
+    font-size: 10px;
+    margin-top: 3px;
   }
 }
 
@@ -883,6 +891,18 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
 }
 .ui-dialog.ui-confirmdialog .ui-dialog-titlebar.ui-widget-header{
   height: 78px;
+}
+.ui-dialog.ui-confirmdialog .ui-dialog-footer{
+  text-align: center;
+  .ui-button-text{
+    padding: .25em 2.1em .25em 2.1em;
+  }
+  button{
+    color: $kGrayscale1;
+    &:hover{
+      color: $kPrimary;
+    }
+  }
 }
 .ui-dialog-buttonpane.ui-widget-content{
   border: 0;
