feat: add playlist type icons to icons font

--- a/themes/default/fonts/style.scss
+++ b/themes/default/fonts/style.scss
@@ -113,6 +113,12 @@
 .kIconwarning:before {
   content: "\e918";
 }
+.kIconPlaylist_Manual:before {
+  content: "\e929";
+}
+.kIconPlaylist_RuleBased:before {
+  content: "\e92a";
+}
 .kIconUnknown:before {
   content: "\e927";
 }
@@ -149,4 +155,3 @@
 .kIconvideo:before {
   content: "\e90a";
 }
-
