fix: fix auto-complete style

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -621,6 +621,7 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
   }
 }
 .ui-autocomplete-input-token{
+  margin: 0px;
   input {
     width: auto;
     background-color: $kGrayscale6;
