fix: add $inputGroupTextColor to support PrimeNG 4.1.2

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -52,6 +52,7 @@ $stateHoverTextColor: $kGrayscale1;
 $inputBgColor: #ffffff;
 $inputTextColor: #333333;
 $invalidInputBorderColor: #cd0a0a;
+$inputGroupTextColor: #222222;
 
 @import '~primeng/resources/themes/theme';
 
