feat(upload-menu): add orange color

--- a/themes/default/scss/_variables.scss
+++ b/themes/default/scss/_variables.scss
@@ -27,6 +27,7 @@ $kPrimary: #00a784;
 $kSecondary: #01accd;
 $kTertiary: #1b4a97;
 $kBlack: #222222;
+$kOrange: #F9A71B;
 $kGrayscale1: #333333;
 $kGrayscale2: #666666;
 $kGrayscale3: #999999;
