--- a/themes/default/fonts/style.scss
+++ b/themes/default/fonts/style.scss
@@ -3,10 +3,10 @@
 @font-face {
   font-family: 'kmcng-icon-pack';
   src:
-    url('#{$mc-theme-font-path}/kmcng-icon-pack.woff2?hfxnrr') format('woff2'),
-    url('#{$mc-theme-font-path}/kmcng-icon-pack.ttf?hfxnrr') format('truetype'),
-    url('#{$mc-theme-font-path}/kmcng-icon-pack.woff?hfxnrr') format('woff'),
-    url('#{$mc-theme-font-path}/kmcng-icon-pack.svg?hfxnrr#kmcng-icon-pack') format('svg');
+          url('#{$mc-theme-font-path}/kmcng-icon-pack.woff2?hfxnrr') format('woff2'),
+          url('#{$mc-theme-font-path}/kmcng-icon-pack.ttf?hfxnrr') format('truetype'),
+          url('#{$mc-theme-font-path}/kmcng-icon-pack.woff?hfxnrr') format('woff'),
+          url('#{$mc-theme-font-path}/kmcng-icon-pack.svg?hfxnrr#kmcng-icon-pack') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,6 +26,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.kIconbulk:before {
+  content: "\e92b";
+  color: #fff;
+}
+.kIconlive:before {
+  content: "\e92c";
+  color: #fff;
+}
+.kIconUpload:before {
+  content: "\e92d";
+  color: #fff;
+}
+.kIconrefresh_small:before {
+  content: "\e90b";
+}
 .kIconpartial_small:before {
   content: "\e922";
 }
@@ -52,9 +67,6 @@
 }
 .kIcondropdown_arrow_top:before {
   content: "\e91e";
-}
-.kIconrefresh_small:before {
-  content: "\e90b";
 }
 .kIconarrow_backward:before {
   content: "\e90c";
