fix: fix data-table header style (font-weight = bold) according to the style guide

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -159,6 +159,7 @@ textarea.ui-inputtext {
 .ui-datatable .ui-datatable-thead>tr>th{
   border-left: none;
   border-right: none;
+  font-weight: bold;
 }
 .ui-datatable th.ui-state-default{
   font-size: 13px;
