fix: fix menu header background and link colors

--- a/themes/default/scss/_variables.scss
+++ b/themes/default/scss/_variables.scss
@@ -3,8 +3,8 @@ $appBkgColor: #f4f6f8;
 $minAppWidth: 1024px;
 
 /* App menu colors */
-$menuBkgColor: #102C5A;
-$mainLinkColor: #A6A5A5;
+$menuBkgColor: #1B4A97;
+$mainLinkColor: #FFFFFF;
 $mainLinkHoverBkg: #252525;
 $mainLinkHoverColor: #FFFFFF;
 $mainLinkActiveColor: #FFFFFF;
