--- a/themes/default/scss/_variables.scss
+++ b/themes/default/scss/_variables.scss
@@ -28,6 +28,8 @@ $kSecondary: #01accd;
 $kTertiary: #1b4a97;
 $kBlack: #222222;
 $kOrange: #F9A71B;
+$kBlue: #112D5B;
+$kAqua: #2ACDED;
 $kGrayscale1: #333333;
 $kGrayscale2: #666666;
 $kGrayscale3: #999999;
