fix: add min height for tables

--- a/themes/default/scss/_variables.scss
+++ b/themes/default/scss/_variables.scss
@@ -16,6 +16,7 @@ $headerTextColor: rgba(255,255,255,0.6);
 
 $appMenuHeight: 50px;
 $contentArea: calc(100vh - 105px);
+$minTableHeight: calc(100vh - 140px);
 
 $appContainerPadding: 50px;
 
