--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -57,18 +57,27 @@ $inputGroupTextColor: #222222;
 @import '~primeng/resources/themes/theme';
 
 /* input */
-.ui-inputtext, .ui-inputtext:enabled, .ui-inputtext:disabled{
-  background-color: $kGrayscale6;
-  border: 1px solid white;
+.ui-inputtext, .ui-inputtext:enabled{
+  background-color: white;
+  border: 1px solid $kGrayscale4;
   height: 34px;
-  color: $kGrayscale1;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  color: $kGrayscale3;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
   &:focus{
     background-color: white;
-    border: 1px solid $kGrayscale4;
+    border: 1px solid $kGrayscale3;
+    color: $kGrayscale1;
   }
+}
+.ui-inputtext:disabled{
+  background-color: $kGrayscale5;
+  border: 1px solid $kGrayscale4;
+  color: $kGrayscale4;
 }
 .ui-inputtext.ui-state-focus, .ui-inputtext:focus{
   box-shadow: none;
@@ -78,16 +87,16 @@ textarea.ui-inputtext {
 }
 
 .ui-inputtext::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: $kGrayscale3;
+  color: $kGrayscale4;
 }
 .ui-inputtext::-moz-placeholder { /* Firefox 19+ */
-  color: $kGrayscale3;
+  color: $kGrayscale4;
 }
 .ui-inputtext:-ms-input-placeholder { /* IE 10+ */
-  color: $kGrayscale3;
+  color: $kGrayscale4;
 }
 .ui-inputtext:-moz-placeholder { /* Firefox 18- */
-  color: $kGrayscale3;
+  color: $kGrayscale4;
 }
 
 /* checkboxes */
@@ -627,7 +636,6 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
   margin: 0px;
   input {
     width: auto;
-    background-color: $kGrayscale6;
     border: 0px solid $kGrayscale6;
     color: $kGrayscale1;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
